--- a/test_app/templates/test_app/newfarmer.html
+++ b/test_app/templates/test_app/newfarmer.html
@@ -57,7 +57,7 @@
             <hr>
             <div class="d-flex justify-content-between">
                 <a type="button" href="{% url 'user_info' %}" class="btn btn-warning">Cancel</a>
-                <button type="submit" class="btn btn-success">Submit</button>
+                <button type="submit" class="btn btn-success">Proceed</button>
             </div>
         </form>
     </div>
