--- a/test_app/templates/test_app/dashboard_viewall.html
+++ b/test_app/templates/test_app/dashboard_viewall.html
@@ -5,6 +5,13 @@
 <div class="row justify-content-center mt-5">
     <div class="col-md-12">
         <h1>Dashboard</h1>
+        <div class="d-flex flex-row-reverse">
+            <div class="row">
+                <div class="col-sm-12 col-md-12">
+                    <input type="search" class="form-control" placeholder="Search..." id="search_farmer" />
+                </div>
+            </div>
+        </div>
         <br>
         <table class="table table hover table-stripped table-responsive-md">
             <thead class="table-success">
